<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mogger</string>
    <string name="hello_world">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Loginimg"> </string>
    <string name="username">Username</string>
    <string name="Submit">Submit</string>
    <string name="Password">Password</string>
    <string name="FirstLast">First And Last Name</string>
    <string name="email">E-Mail</string>
    <string name="year">Birth Year</string>
    <string name="nothing"> </string>
    <string name="Textview">TextView</string>
    <string name="edit">Edit</string>
    <string name="upload">Upload Profile Pic</string>
    <string name="Friends">Friends</string>
    <string name="wgn">What\'s going on?</string>
    <string name="post">Post</string>
    <string name="bio">Bio:</string>
    <string name="regerror">There Was An Error In Registering, are you sure all the fields are completed?</string>
    <string name="conpass">Confirm Password</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="remember">Remember Me</string>
    <string name="exit">Exit</string>
    <string name="logerror">There was a problem logging in. Make sure your email and password are correct</string>
    <string name="welcome">WELCOME</string>
    <string name="logout">Logout</string>

</resources>